# stenbone_takes_on_modern_cpp_challenge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  problem1.cpp  problem2.cpp  problem3.cpp  problem_boiler_plate.cpp  stenbone_takes_on_modern_cpp_challenge.sln
ModernCppChallengeTests/: MathProblemsTests.cpp  ModernCppChallengeTests.vcxproj
stenbone_takes_on_modern_cpp_challenge/: MathProblems.h  problem1.cpp  problem2.cpp  problem4.cpp  stenbone_takes_on_modern_cpp_challenge.vcxproj  stenbone_takes_on_modern_cpp_challenge.vcxproj.filters
